[css-grid] Check if baseline alignment affects grid areas sizing

The bug this CL intend to fix has a very specific root cause; we were
wrongly assuming that we need to repeat the track sizing algorithm only
if baseline alignment may change the grid container's intrinsic size.

Actually, the spec states that we should run a new iteration of the
sizing algorithm if any of the grid items has changed its min-content
contribution. This affects to the grid item's container, hence the
grid area, but not necessarily to the grid container.

Since we were running the baseline alignment logic after the first run
of the tracks sizing algorithm, we were relying on the extra run to
adjust the grid areas' size based on the resulting baseline alignment
offsets.

This patch fixes the bug by comparing the grid areas's size with the
baseline extent of their items, triggering the extra tracks sizing cycle
when necessary.

BUG=719445

Review-Url: https://codereview.chromium.org/2868283002
Cr-Commit-Position: refs/heads/master@{#485518}

Former-commit-id: 3d184fc5f831f45ca9a5f75f3d04f33e3f5dc2df